# dual-sdf-contact

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: BaselineOptions.cmake
configs/benchmarks/: gap_sweep.json  mesh_gap_sweep.json  mesh_gap_sweep_2.json  mesh_nonconvex_smoke.json  mesh_nonconvex_smoke_2.json  mesh_orientation_sweep.json  mesh_orientation_sweep_2.json  mesh_resolution_sweep.json  mesh_smoke.json  orientation_sweep.json  primitive_smoke.json  resolution_sweep.json
data/: README.md
docs/: benchmark_plan.md  experiment_freeze.md  migrate_to_wsl.md  results_summary.md
examples/: README.md
include/baseline/benchmark/: benchmark_config.h
include/baseline/contact/: candidate_pair_manager.h  contact_problem_builder.h  dual_sdf_contact_calculator.h  reference_geometry.h
include/baseline/core/: build_config.h.in  io_utils.h  math.h  simple_json.h
include/baseline/mesh/: triangle_mesh.h
include/baseline/runtime/: backend_factory.h
include/baseline/sdf/: nanovdb_sdf_provider.h  openvdb_sdf_provider.h  sdf_provider.h
include/baseline/solver/: contact_problem.h  contact_solver.h  siconos_solver.h  simple_ccp_solver.h
python/baseline/: __init__.py  experiment_freeze.py  export_camera_ready_tables.py  export_paper_assets.py  postprocess_benchmark.py  run_benchmark.py  run_example.py
scripts/: bootstrap_windows.ps1  bootstrap_wsl.sh  build_windows.ps1  build_wsl.sh  configure_windows.ps1  configure_wsl.sh  export_camera_ready_tables_wsl.sh  export_paper_assets_wsl.sh  export_paper_tables_wsl.sh  run_all_examples_windows.ps1  run_all_examples_wsl.sh  run_benchmark_wsl.sh  run_default_suite_wsl.sh  run_paper_extended_suite_wsl.sh  run_paper_minimal_suite_wsl.sh
src/: CMakeLists.txt
src/apps/: ex01_nanovdb_hello.cpp  ex02_hppfcl_distance.cpp  ex03_dual_sdf_gap.cpp  ex04_single_step_contact.cpp  ex05_compare_backends.cpp  ex06_regression_smoke.cpp  example_utils.h
src/benchmark/: benchmark_config.cpp
src/contact/: candidate_pair_manager.cpp  contact_problem_builder.cpp  dual_sdf_contact_calculator.cpp  reference_geometry.cpp
src/core/: io_utils.cpp  simple_json.cpp
src/mesh/: triangle_mesh.cpp
src/runtime/: backend_factory.cpp
src/sdf/: nanovdb_sdf_provider.cpp  openvdb_sdf_provider.cpp  sdf_provider.cpp
src/solver/: siconos_solver.cpp  simple_ccp_solver.cpp
tests/: CMakeLists.txt  test_backend_factory_defaults.cpp  test_benchmark_backend_labels_present.cpp  test_benchmark_config_parse.cpp  test_benchmark_runner.py  test_camera_ready_export.py  test_contact_frame_orthogonality.cpp  test_dual_sdf_gap_consistency_against_analytic.cpp  test_dual_sdf_gap_symmetry.cpp  test_ex05_generates_resolved_config.cpp  test_ex05_generates_summary_files.cpp  test_ex05_outputs_exist.cpp  test_example_reports_backend_name.cpp  test_mesh_case_smoke.cpp  test_mesh_config_parse.cpp  test_mesh_orientation_sweep_smoke.cpp  test_nonconvex_mesh_case_smoke.cpp  test_openvdb_provider_smoke.cpp  test_paper_assets.py  test_postprocess_benchmark.py  test_python_smoke.py  test_reference_backend_switch.cpp  test_reference_quality_labels_present.cpp  test_resolution_sweep_smoke.cpp  test_sdf_sampling.cpp  test_second_nonconvex_mesh_smoke.cpp  test_siconos_backend_smoke.cpp  test_simple_ccp_solver_smoke.cpp  test_unavailable_backend_handling.cpp
