function(baseline_add_test_exe target_name)
  add_executable("${target_name}" "${target_name}.cpp")
  target_link_libraries("${target_name}" PRIVATE baseline::core)
  baseline_set_output_dirs("${target_name}")
  set_target_properties("${target_name}" PROPERTIES FOLDER "tests")
  add_test(NAME "${target_name}" COMMAND "${target_name}")
  set_tests_properties("${target_name}" PROPERTIES SKIP_RETURN_CODE 77)
endfunction()

baseline_add_test_exe(test_sdf_sampling)
baseline_add_test_exe(test_dual_sdf_gap_symmetry)
baseline_add_test_exe(test_contact_frame_orthogonality)
baseline_add_test_exe(test_simple_ccp_solver_smoke)
baseline_add_test_exe(test_backend_factory_defaults)
baseline_add_test_exe(test_unavailable_backend_handling)
baseline_add_test_exe(test_example_reports_backend_name)
baseline_add_test_exe(test_openvdb_provider_smoke)
baseline_add_test_exe(test_reference_backend_switch)
baseline_add_test_exe(test_dual_sdf_gap_consistency_against_analytic)
baseline_add_test_exe(test_ex05_outputs_exist)
baseline_add_test_exe(test_benchmark_config_parse)
baseline_add_test_exe(test_ex05_generates_resolved_config)
baseline_add_test_exe(test_ex05_generates_summary_files)
baseline_add_test_exe(test_benchmark_backend_labels_present)
baseline_add_test_exe(test_resolution_sweep_smoke)

if(BASELINE_HAS_SICONOS)
  baseline_add_test_exe(test_siconos_backend_smoke)
endif()
